@@ -14,6 +14,10 @@ PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_FACEBOOK_DESCRIPTION="Choose to di
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_FACEBOOK_LABEL="Display Facebook Like"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_GOOGLE_DESCRIPTION="Choose to display a Google +1 button"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_GOOGLE_LABEL="Display Google +1"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_POSITION_DESCRIPTION="Choose to display the buttons at the top or bottom of the article"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_POSITION_LABEL="Position on Article"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_POSITION_OPTION_BOTTOM="Bottom"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_POSITION_OPTION_TOP="Top"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_TWITTER_DESCRIPTION="Choose to display a Twitter Share button"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_TWITTER_LABEL="Display Twitter Share"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_ACTION_DESCRIPTION="Choose to display "_QQ_"Like"_QQ_" or "_QQ_"Recommend"_QQ_" on the button"
