@@ -1,3 +1,6 @@
+12-August-2011 Michael Babker
++ Add ability to display buttons at the bottom of the article
+
 30-July-2011 Michael Babker
 + Add pt-BR and sv-SE translations
 
